[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/CustomElements/AutoTextureButton.shader" type="Shader" id=1]
[ext_resource path="res://UI/Fonts/Text.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Fonts/TextOutlined.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/TeleportMenu/TeleportMenu.gd" type="Script" id=4]
[ext_resource path="res://Resources/Icons/ModernLandscapeLab/up.svg" type="Texture" id=5]
[ext_resource path="res://Resources/Icons/ModernLandscapeLab/down.svg" type="Texture" id=6]
[ext_resource path="res://UI/CustomElements/AutoIconButton.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/color = Vector3( 0, 0, 0 )
shader_param/rotation_radians = null
shader_param/color_length_modulate_threshold = 1.5

[node name="TeleportMenu" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -683.0
margin_bottom = -349.0
rect_min_size = Vector2( 341, 227 )
rect_pivot_offset = Vector2( 440, 160 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 604.0
margin_bottom = 731.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeleportTo" type="Label" parent="VBoxContainer"]
margin_right = 604.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
text = "Teleport to"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 604.0
margin_bottom = 76.0

[node name="X" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_right = 196.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 40 )
focus_mode = 2
mouse_default_cursor_shape = 1
min_value = -1e+07
max_value = 1e+08
step = 0.1
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Y" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 204.0
margin_right = 400.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 40 )
focus_mode = 2
mouse_default_cursor_shape = 1
min_value = -1e+07
max_value = 1e+08
step = 0.1
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Z" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 408.0
margin_right = 604.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 40 )
focus_mode = 2
mouse_default_cursor_shape = 1
min_value = -1e+07
max_value = 1e+08
step = 0.1
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TeleportToButton" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 604.0
margin_bottom = 121.0
text = "Teleport"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 604.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 3 )
text = "Points of Interest"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 604.0
margin_bottom = 265.0
rect_min_size = Vector2( 253, 105 )
custom_fonts/font = ExtResource( 2 )
allow_reselect = true
max_columns = 50
same_column_width = true
fixed_icon_size = Vector2( 25, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 273.0
margin_right = 604.0
margin_bottom = 308.0

[node name="Add" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Hinzufügen"

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 133.0
margin_right = 261.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Punkt löschen"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
visible = false
margin_top = 169.0
margin_right = 254.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 2 )

[node name="Save" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 169.0
margin_right = 254.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 2 )
text = "Speichern"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 316.0
margin_right = 604.0
margin_bottom = 316.0

[node name="Arrows" type="VBoxContainer" parent="."]
margin_left = 612.0
margin_right = 642.0
margin_bottom = 143.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10

[node name="Tabs" type="Tabs" parent="Arrows"]
margin_right = 30.0
margin_bottom = 45.0

[node name="ArrowUp" parent="Arrows" instance=ExtResource( 7 )]
material = SubResource( 1 )
margin_top = 55.0
margin_right = 30.0
margin_bottom = 85.0
texture_normal = ExtResource( 5 )
texture_name = "up"

[node name="HSeparator" type="HSeparator" parent="Arrows"]
margin_top = 95.0
margin_right = 30.0
margin_bottom = 103.0

[node name="ArrowDown" parent="Arrows" instance=ExtResource( 7 )]
material = SubResource( 1 )
margin_top = 113.0
margin_right = 30.0
margin_bottom = 143.0
texture_normal = ExtResource( 6 )
texture_name = "down"
